--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule ".zsh_themes/powerlevel9k"]
 	path = .zsh_themes/powerlevel9k
 	url = git@github.com:bhilburn/powerlevel9k.git
+[submodule ".zsh/zsh-syntax-highlighting"]
+	path = .zsh/zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
