feat: Add ohmyzsh as module

--- a/.gitmodules
+++ b/.gitmodules
@@ -75,4 +75,4 @@
 	url = https://github.com/zsh-users/zsh-autosuggestions
 [submodule ".oh-my-zsh"]
 	path = .oh-my-zsh
-	url = https://github.com/robbyrussell/oh-my-zsh
+	url = git@github.com:ohmyzsh/ohmyzsh.git
