Updated for PowerLevel10K
Signed-off-by: Victor Seiji Hariki <victorseijih@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -43,9 +43,6 @@
 [submodule ".vim/bundle/clang_complete"]
 	path = .vim/bundle/clang_complete
 	url = https://github.com/Rip-Rip/clang_complete
-[submodule ".zsh_themes/powerlevel9k"]
-	path = .zsh_themes/powerlevel9k
-	url = https://github.com/bhilburn/powerlevel9k.git
 [submodule ".zsh/zsh-syntax-highlighting"]
 	path = .zsh/zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
@@ -76,3 +73,6 @@
 [submodule ".oh-my-zsh"]
 	path = .oh-my-zsh
 	url = git@github.com:ohmyzsh/ohmyzsh.git
+[submodule ".zsh_themes/powerlevel10k"]
+	path = .zsh_themes/powerlevel10k
+	url = https://github.com/romkatv/powerlevel10k.git
