--- a/.gitmodules
+++ b/.gitmodules
@@ -72,7 +72,7 @@
 	url = https://github.com/zsh-users/zsh-autosuggestions
 [submodule ".oh-my-zsh"]
 	path = .oh-my-zsh
-	url = git@github.com:ohmyzsh/ohmyzsh.git
+	url = https://github.com/ohmyzsh/ohmyzsh.git
 [submodule ".zsh_themes/powerlevel10k"]
 	path = .zsh_themes/powerlevel10k
 	url = https://github.com/romkatv/powerlevel10k.git
